# md-checker

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  REVIEW.md  docker-compose.amd.yml  docker-compose.nvidia.yml  docker-compose.yml  pyproject.toml  run-gui-headless.sh  run-gui.sh  sample.md
.devcontainer/: Dockerfile  devcontainer.amd.json  devcontainer.cpu.json  devcontainer.nvidia.json
.devcontainer/amd/: devcontainer.json
.devcontainer/cpu/: devcontainer.json
.devcontainer/nvidia/: devcontainer.json
docs/: README.md
mdcheck/: __init__.py  cli.py  constants.py  gui.py  ollama_client.py
mdcheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: __init__.py  cli.py  gui.py  ollama_client.py  rules.py
